# Agent-Factory

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
app/: main.py
discord_server/: main.py
mcp_server/: main.py
mcp_server/config/: settings.py
mcp_server/schema/: agent_message.py
mcp_server/service/: agent_service.py  discord_service.py  invoice_service.py  tool_service.py
